Saving new entry 2016-05-03-18-46-33

--- a/gh-weblog-2/content/posts/markdown/2016-05-03-18-46-33.md
+++ b/gh-weblog-2/content/posts/markdown/2016-05-03-18-46-33.md
@@ -12,7 +12,7 @@ But the reason for this is not because Goggles, or even the browser is doing som
 
 ## HTTP, the basis upon which browsing is built
 
-If you're a user of the web, no doubt you'll have heard about `http` and `https`, even if you can't really say what they technically-precisely mean. In simple terms (but without dumbing it down), HTTP is the language that servers and browsers use to negotiate data transfers. The original intention was for those two to talk about HTML code, so that's where the `h` in `http` comes from (it stands for "hypertext" in both `http` and `html`), but we're mostly ignoring that these days, and HTTP is used by browsers and servers to negotiate transmission of all sorts of files - web pages, stylesheets, javascript source code, raw data, music, video, images, you name it.
+If you're a user of the web, no doubt you'll have heard about `http` and `https`, even if you can't really say what they technically-precisely mean. In simple terms (but without dumbing it down), [HTTP](https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol) is the language that servers and browsers use to negotiate data transfers. The original intention was for those two to talk about HTML code, so that's where the `h` in `http` comes from (it stands for "hypertext" in both `http` and `html`), but we're mostly ignoring that these days, and HTTP is used by browsers and servers to negotiate transmission of all sorts of files - web pages, stylesheets, javascript source code, raw data, music, video, images, you name it.
 
 However, HTTP is a bit like regular English: you can listen in on it. If you go to a bar and sit yourself with a group of people, you can listen to their conversations. The same goes for HTTP: in order for your browser and the server to talk they rely on a chain of other computers connected to the internet to get messages relayed from one ot the other, and any of those computers can listen in on what the browser and server are saying to each other. In an HTTP setting it gets a little stranger even, because any of those computers could look at what the browser or server are saying, *replace what is being said with something else* and then forward that on. And you'll have no way of knowing whether that's what happened. It's literally as if the postal service took a letter you sent, opened it, rewrote it, resealed it, and then sent that on. We trust that they won't, and computers connected to the internet trust that other computers don't mess with the communication, but... they can. And sometimes they do.
 
@@ -20,15 +20,15 @@ And that's pretty scary, actually. You don't want to have to "trust" that your c
 
 ## What can we do to fix that?
 
-Well, we can use HTTPS, or "secure HTTP", instead. Now, I need to be very clear here: the term "secure" in "secure HTTP" refers to secure *communication*. Rather than talking "in English", the browser and server agree on a secret language that you could listen to, but you won't know what's being said, and so you can't intercept-and-modify the communication willy-nilly without both parties knowing that their communications are being tampered with. However it does **not** mean that the data the browser and server agree to receive or send is "safe data". It only means that both parties can be sure that what one of them receives is what the other intended to send. All we can be sure of is that no one will have been able to see what got sent, and that no one modified it somewhere along the way without us knowing.
+Well, we can use [HTTPS](https://en.wikipedia.org/wiki/HTTPS), or "secure HTTP", instead. Now, I need to be very clear here: the term "secure" in "secure HTTP" refers to secure *communication*. Rather than talking "in English", the browser and server agree on a secret language that you could listen to, but you won't know what's being said, and so you can't intercept-and-modify the communication willy-nilly without both parties knowing that their communications are being tampered with. However it does **not** mean that the data the browser and server agree to receive or send is "safe data". It only means that both parties can be sure that what one of them receives is what the other intended to send. All we can be sure of is that no one will have been able to see what got sent, and that no one modified it somewhere along the way without us knowing.
 
-However, those are *big* certainties, so for this reason the internet's been moving more and more towards preferring HTTPS for everything. But not everyone's using HTTPS yet, and so we run into something called the "Mixed Content" issue.
+However, those are *big* certainties, so for this reason the internet's been moving more and more towards preferring HTTPS for everything. But not everyone's using HTTPS yet, and so we run into something called the ["Mixed Content"](https://developer.mozilla.org/en-US/docs/Security/Mixed_content) issue.
 
 ## Let's look at an example.
 
 Imagine I run a web page, much like this one, and I run it on HTTP because I am not aware of the security issues, and my page relies on some external images, and some JavaScript for easy navigation, and maybe an embedded podcast audio file. All of those things are linked as `http://......`, and everything worked fine.
 
-But then I hear about the problems with HTTP and the privacy and security implications sound horrible! So, to make sure my visitors don't have to worry about whether the page they get from my server is my page, or a modified version of my page, I spring into action, I switch my page over to HTTPS; I get a security certificate, I set everything on my own server up so that it can "talk" in HTTPS, and done!
+But then I hear about the problems with HTTP and the privacy and security implications sound horrible! So, to make sure my visitors don't have to worry about whether the page they get from my server is my page, or a modified version of my page, I spring into action, I switch my page over to HTTPS; I get a [security certificate](https://en.wikipedia.org/wiki/Public_key_certificate), I set everything on my own server up so that it can "talk" in HTTPS, and done!
 
 Except immediately after switching, my web page is completely broken! The page itself loads, but none of the images show up, and the JavaScript doesn't seem to be working, and that podcast embed is gone! What happened??
 
@@ -63,7 +63,7 @@ If you remix an `http://...` website, we will give you a URL that starts with `h
 
 ## Security vs Usability
 
-Security is everybody's responsibility, and explaining the risks on the web that are inherent to the technology we use every day is always worth doing. But that doesn't mean we need to lock everything down so "you can't use it, the end, go home, stop using HTTP". That's not how the real world works.
+[Security is everybody's responsibility](https://www.mozilla.org/en-US/security), and explaining the risks on the web that are inherent to the technology we use every day is always worth doing. But that doesn't mean we need to lock everything down so "you can't use it, the end, go home, stop using HTTP". That's not how the real world works.
 
 So we want you to be able to remix your favourite sites, even if they're HTTP, and have a learning/teaching opportunity there around security. Yes, things will look bad when you try to load an HTTP site on HTTPS, but there's a reason for that, and it's important to talk about it.
 
