Saving new entry 2016-05-03-18-46-33

--- a/gh-weblog-2/content/posts/markdown/2016-05-03-18-46-33.md
+++ b/gh-weblog-2/content/posts/markdown/2016-05-03-18-46-33.md
@@ -4,7 +4,7 @@ We recently fixed something around Mozilla's X-Ray Goggles. A long running probl
 
 So let's start with X-Ray Goggles: the X-Ray Goggles are [a tool](https://goggles.mozilla.org) made by [Mozilla](https://mozilla.org) that lets you "remix" web pages after loading them in your browser. You can go to your favourite place on the web, fire up the goggles (similar to how a professional web developer would open up their dev tools), and then change text, styling, images, and whatever else you might want to change, for as long as you want to change things, and then when you're happy with the result and you want to show your remix to your friends, you can publish that remix so that it has its own URL that you can share.
 
-However, the X-Ray Goggles use a publishing service that hosts all its content over `https`, because we care about secure communication at Mozilla, and using `https` is best practice. But in this particular case, it's also kind of bad: large parts of the web still use `http`, and even if a website has an `https` equivalent, people usually visit the `http` version anyway. Unless those websites *force* users to the `https` version of the site (using a redirect message), then site they'll be on, and the site they'll be remixing, will use HTTP, and the moment the user publishes their remix with X-Ray Goggles, and they get an `https` URL back, and they open that URL in their browser....
+However, the X-Ray Goggles use a publishing service that hosts all its content over `https`, because we care about secure communication at Mozilla, and using `https` is best practice. But in this particular case, it's also kind of bad: large parts of the web still use `http`, and even if a website has an `https` equivalent, people usually visit the `http` version anyway. Unless those websites *force* users to the `https` version of the site (using a redirect message), then the site they'll be on, and the site they'll be remixing, will use HTTP, and the moment the user publishes their remix with X-Ray Goggles and they get an `https` URL back, and then open that URL in their browser....
 
 well, let's just say "everything looks broken" is not wrong. 
 
