Saving new entry 2016-06-23-17-02-44

--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -39,3 +39,5 @@ Except on a mobile device, there **is** no post. There are no apps that perform 
 Fair enough. I have several real cameras, but that's exactly why I'm going to invoke one of my favourite quotes in recent years in a moment: my phone costs $700; that's an insane amount of money if all it could do was call and text, and so it can do a lot more. It has a high performance CPU and GPU, it has a high quality screen, and two (not just one) high resolution, high quality fixed aperture cameras. And you're asking why I should expect to be able to do a thing that literally 100% of users of this kind of device do dozens of times a day, with a quality that reflects the price and quality of the hardware I'm using, instead of "in the gimpiest broken way possible"? I'll tell you why, and here's that quote:
 
 **"Because this is bullshit, and we can fix this."**
+
+(Do you work on any Android camera apps? Please baking profile support to your app. Do you work on Android? Please start taking colour seriously, people use phones to share images, not take pics and only ever view them on their own phone. Do you care about your friends seeing the same photo as the one you saw on your phone? Complain to the former two groups, or become part of them. As for me: the complaints will continue until <s>morale</s> support improves)
