--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -1,10 +1,10 @@
 I've written about [how bad we are at digital photography from a technical perspective](http://pomax.github.io/1436836360570/we-are-really-terrible-at-digital-colours-and-digital-photography) before, but now that I own a high end mobile device with a decent camera and screen, it is constant source of frustration how terrible photography on $700 and above mobile devices is. Certainly, you could argue that they're phones, not cameras, but then you've not really been paying attention to what people actually *use* their phones for, where photography ranks considerably higher than calls.
 
-I have a [Nexus 6P](https://store.google.com/product/nexus_6p), a high end Android device with --on paper-- a rather good camera, and a very nice AMOLED screen. However, photographs taken with it, no matter whether that's done with the native camera app, [CameraMX](http://www.magix.com/ca/apps/cameramx/), [Camera FV-5](http://www.camerafv5.com/), or [Open Camera](http://opencamera.sourceforge.net/), unless I treat the phone as "half the work", none of the pictures it takes are worth anything if my intention is to share them with the rest of the world, because while I might see "nice, vibrant colours", the moment  I post that picture online, people will see completely different colours than I'm getting on my phone. All the edits I made, even with $10 or $25 image processing apps, were nothing but a waste of time and potentially money.
+I have a [Nexus 6P](https://store.google.com/product/nexus_6p), a high end Android device with —on paper— a rather good camera, and a very nice AMOLED screen. However, photographs taken with it, no matter whether that's done with the native camera app, [CameraMX](http://www.magix.com/ca/apps/cameramx/), [Camera FV-5](http://www.camerafv5.com/), or [Open Camera](http://opencamera.sourceforge.net/), unless I treat the phone as "half the work", none of the pictures it takes are worth anything if my intention is to share them with the rest of the world, because while I might see "nice, vibrant colours", the moment  I post that picture online, people will see completely different colours than I'm getting on my phone. All the edits I made, even with $10 or $25 image processing apps, were nothing but a waste of time and potentially money.
 
 ## Colour calibration - or, the lack thereof
 
-If you care about your colours --and most photographers do, regardless of whether they're hobbyists or professionals-- you need colour calibration. On desktop this means colour calibrating your monitor (either with an expensive calibrator like a [SpyderPro](http://spyder.datacolor.com/portfolio-view/spyder5pro), or with some [open source and open hardware](https://blog.adafruit.com/2011/11/14/colorhug) and personal effort), so that the colours it displays are the colours you shot (constrained by the absolute nonsense that is our acceptance of [color gamuts](https://en.wikipedia.org/wiki/Gamut), where even in 2016 we collectively don't seem to care that screens literally cannot display about half the colours the human eye sees in the real world - where's universal [UHDTV](https://en.wikipedia.org/wiki/Ultra-high-definition_television) and [Rec. 2020](https://en.wikipedia.org/wiki/Rec._2020) support in regular consumer displays?).
+If you care about your colours —and most photographers do, regardless of whether they're hobbyists or professionals— you need colour calibration. On desktop this means colour calibrating your monitor (either with an expensive calibrator like a [SpyderPro](http://spyder.datacolor.com/portfolio-view/spyder5pro), or with some [open source and open hardware](https://blog.adafruit.com/2011/11/14/colorhug) and personal effort), so that the colours it displays are the colours you shot (constrained by the absolute nonsense that is our acceptance of [color gamuts](https://en.wikipedia.org/wiki/Gamut), where even in 2016 we collectively don't seem to care that screens literally cannot display about half the colours the human eye sees in the real world - where's universal [UHDTV](https://en.wikipedia.org/wiki/Ultra-high-definition_television) and [Rec. 2020](https://en.wikipedia.org/wiki/Rec._2020) support in regular consumer displays?).
 
 And, it means shooting a [profiling target](https://www.google.ca/search?q=color+profile+target&tbm=isch) with your camera because calibration has to pass through every display chip: even if your monitor is calibrated, you still need to make sure that the color incorrectness of your camera can be compensated for as well (and oh boy can cameras be wrong)
 
