Saving new entry 2016-06-23-17-02-44

--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -8,7 +8,7 @@ If you care about your colours —and most photographers do, regardless of wheth
 
 And, it means shooting a [profiling target](https://www.google.ca/search?q=color+profile+target&tbm=isch) with your camera because calibration has to pass through every display chip: even if your monitor is calibrated, you still need to make sure that the color incorrectness of your camera can be compensated for as well (and oh boy can cameras be wrong)
 
-So on an Android "phone" we have the same problem, but in a single device. We need to be able to calibrate the screen, because those fancy, super bright, super clear AMOLED screens actually get colour [**super wrong**](), and we need to be able to do shot calibration through the camera. 
+So on an Android "phone" we have the same problem, but in a single device. We need to be able to calibrate the screen, because those fancy, super bright, super clear AMOLED screens actually get colour **super wrong**, and we need to be able to do shot calibration through the camera. 
 
 Neither of those things are possible.
 
