Saving new entry 2016-06-23-17-02-44

--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -18,7 +18,7 @@ If you were smart enough to, after getting your Android device, immediately inst
 
 Real calibration measures the response curves for each of the primaries that a display can generate, as well as the intensity responses curves for "greys" (with each primary firing at the same supposed intensity), and builds an ICC profile that lets the device tell the display how to change primary intensities independently of one another. Unlike a white point shift, where the display essentially just renders colours with an overlay filter, without looking at individual pixel values, true colour calibration involves rewriting colour values for every individual pixel.
 
-And for reasons that I do not understand, [$1000 imaging devices](http://www.apple.com/ca/shop/buy-iphone/iphone6) that you carry around in your pocket can't do that, whereas even a $25 graphics card in an ancient computer running Windows 95 will happily apply an ICC profile for you. *Surely* this is not a technical limitation at this point.
+And for reasons that I do not understand, [$1000 imaging devices](http://www.apple.com/ca/shop/buy-iphone/iphone6) that you carry around in your pocket can't do that, whereas even a $25 graphics card in an ancient computer running Windows XP will happily apply an ICC profile for you. *Surely* this is not a technical limitation at this point.
 
 ## Calibrating the camera
 
