Saving new entry 2016-06-23-17-02-44

--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -32,7 +32,7 @@ This is why you'll see photographers carry around calibration targets: cards pri
 
 Unfortunately, even though there are a number of commonly used scene calibration targets, neither Android nor IOS have ways to tell the phone itself to take a calibration with "calibration target X" so that the camera data that gets sent to a camera app is correct, which means that scene calibration on a mobile device is still the same as in traditional photography:  take a picture of a calibration target every now and then, and then "fix things in post".
 
-Except on a mobile device, there **is** no post. There are no apps that perform batch corrects, there are no apps that can abstract a correction profile off of an [IT8](https://en.wikipedia.org/wiki/IT8) or [ColorChecker](http://xritephoto.com/colorchecker-passport-photo) target, there are no apps that can load or embed [ICC profiles](https://en.wikipedia.org/wiki/ICC_profile) into images. There is nothing, and so the only way to do half-decent photography with a $1000 device that is both camera and computer, is to have a **second** computer with a desktop operating system and real photo processing software.
+Except if you just have a mobile device, there **is** no reasonable post processing. There are no apps that perform batch corrects, there are no apps that can abstract a correction profile off of an [IT8](https://en.wikipedia.org/wiki/IT8) or [ColorChecker](http://xritephoto.com/colorchecker-passport-photo) target, there are no apps that can load or embed [ICC profiles](https://en.wikipedia.org/wiki/ICC_profile) into images. There is nothing, and so the only way to do half-decent photography with a $1000 device that is both camera and computer, is to have a **second** computer with a desktop operating system and real photo processing software.
 
 ## Why are you complaining, just use a real camera then
 
