Saving new entry 2016-06-23-17-02-44

--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -40,4 +40,4 @@ Fair enough. I have several real cameras, but that's exactly why I'm going to in
 
 **"Because this is bullshit, and we can fix this."**
 
-(Do you work on any Android camera apps? Please baking profile support to your app. Do you work on Android? Please start taking colour seriously, people use phones to share images, not take pics and only ever view them on their own phone. Do you care about your friends seeing the same photo as the one you saw on your phone? Complain to the former two groups, or become part of them. As for me: the complaints will continue until <s>morale</s> support improves)
+(Do you work on any Android camera apps? Please bake in profile support to your app. Do you work on Android? Please start taking colour seriously, people use phones to share images, not take pics and only ever view them on their own phone. Do you care about your friends seeing the same photo as the one you saw on your phone? Complain to the former two groups, or become part of them. As for me: the complaints will continue until <s>morale</s> support improves)
