Saving new entry 2016-06-23-17-02-44

--- a/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
+++ b/gh-weblog-2/content/posts/markdown/2016-06-23-17-02-44.md
@@ -1,4 +1,4 @@
-I've written about [how bad we are at digital photography from a technical perspective](http://pomax.github.io/1436836360570/we-are-really-terrible-at-digital-colours-and-digital-photography) before, but now that I own a high end mobile device with a decent camera and screen, it is constant source of frustration how terrible photography on $700 and above mobile devices is. Certainly, you could argue that they're phones, not cameras, but then you've not really been paying attention to what people actually *use* their phones for, where photography ranks considerably higher than calls.
+I've written about [how bad we are at digital photography from a technical perspective](http://pomax.github.io/1436836360570/we-are-really-terrible-at-digital-colours-and-digital-photography) before, but now that I own a high end mobile device with a decent camera and screen (I was using a [Nokia N900](https://en.wikipedia.org/wiki/Nokia_N900) for my phone needs until a few weeks ago. Now it's exclusively my alarm clock), it is a constant source of frustration how terrible photography on $700 and above mobile devices is. Certainly, you could argue that they're phones, not cameras, but then you've not really been paying attention to what people actually *use* their phones for, where photography ranks considerably higher than calls.
 
 I have a [Nexus 6P](https://store.google.com/product/nexus_6p), a high end Android device with —on paper— a rather good camera, and a very nice AMOLED screen. However, photographs taken with it, no matter whether that's done with the native camera app, [CameraMX](http://www.magix.com/ca/apps/cameramx/), [Camera FV-5](http://www.camerafv5.com/), or [Open Camera](http://opencamera.sourceforge.net/), unless I treat the phone as "half the work", none of the pictures it takes are worth anything if my intention is to share them with the rest of the world, because while I might see "nice, vibrant colours", the moment  I post that picture online, people will see completely different colours than I'm getting on my phone. All the edits I made, even with $10 or $25 image processing apps, were nothing but a waste of time and potentially money.
 
