Saving new entry 2016-07-11-16-55-51

--- a/gh-weblog-2/content/posts/markdown/2016-07-11-16-55-51.md
+++ b/gh-weblog-2/content/posts/markdown/2016-07-11-16-55-51.md
@@ -4,4 +4,4 @@ As such, people suggested getting a mic and talking while cooking, to capture mo
 
 Except having ruined five recording sessions now over audio problems, clipped signals, stutters, and general commentary problems that sync up with the video in a way that they can't be cut out has actually left me extremely depressed over the whole venture, and that was never the point of these videos: this was supposed to be fun. Working in the kitchen is a thing that directly influences my emotional state: making delicious food makes me happy, and ruining food gets me angry and depressed, and spending hours in a kitchen only to end up with failures this many times means I'm doing this wrong. I've allowed my hobby to become a depression, and it's time to cut that off.
 
-So: after ending up with only a single session that was even remotely passable (and even then, had clipped audio) I'm going back to text overlays. I might add some background music, and will think about whether post-commentary is an option, but for now I want to enjoy my life in the kitchen again, which means overhead and stove videos that let me [do what I love most](http://wouldeatagain.ca/2016/07/10/chocolate-bread-pudding), without having to divide my focus between "doing the thing I love" and "talking about the thing I'm doing".
+So: after ending up with only a single session that was even remotely passable (and even then, had clipped audio - I might eventually redo it without audio and just consider that playlist a lost cause to be deleted) I'm going back to text overlays. Sure, I might add some background music, and I will think about whether post-commentary is an option, but for now I want to enjoy my life in the kitchen again. And that means overhead and stove videos that let me [do what I love most](http://wouldeatagain.ca/2016/07/10/chocolate-bread-pudding), without having to divide my focus between "doing the thing I love" and "talking about the thing I'm doing".
