Saving new entry 2015-07-14-01-12-40

--- a/gh-weblog-2/content/posts/markdown/2015-07-14-01-12-40.md
+++ b/gh-weblog-2/content/posts/markdown/2015-07-14-01-12-40.md
@@ -240,4 +240,4 @@ Then: the question "Is this problem academic?" and to that I have to categorical
 
 And it's not just nature: I've spent weeks trying to properly digitise sheets with some 500+ different fountain pen inks, in all the colours of the rainbow (and a few that aren't in it, I'm sure), trying differing calibrations and devices to try to get "at least most of the colours" to match. That process just grinds to a halt because of limitations in technology every time. You basically end up slicing up each photograph and then manually trying to correct each individual ink to match what's on paper, which isn't even possible for a fair number of colours because they're gorgeous, and absolutely nowhere inside the aRGB gamut. So, unfortunately, this is a real problem that I run into so often that the built up frustration over it culminated in the article you just read.
 
-Finally, to those people who feel I need an editor: *I absolutely agree*, which is why I generally try to reread my articles a few days after posting so I'm reading it with a fresh eye. Until then, if you spot horrible typos or weird phrases, my blog *including the posts* are open source, so [have a look at the source for this post](https://github.com/Pomax/Pomax.github.io/blob/master/gh-weblog/content/posts/markdown/2015-07-14-01-12-40.md) and rewrite it for me if you think that'll improve the phrasing!
+Finally, to those people who feel I need an editor: *I absolutely agree*, which is why I generally try to reread my articles a few days after posting so I'm reading it with a fresh eye. Until then, if you spot horrible typos or weird phrases, my blog *including the posts* are open source, so [have a look at the source for this post](https://github.com/Pomax/pomax.github.io/blob/master/gh-weblog-2/content/posts/markdown/2015-07-14-01-12-40.md) and rewrite it for me if you think that'll improve the phrasing!
