Saving new entry 2016-07-26-00-47-16

--- a/gh-weblog-2/content/posts/markdown/2016-07-26-00-47-16.md
+++ b/gh-weblog-2/content/posts/markdown/2016-07-26-00-47-16.md
@@ -10,6 +10,6 @@ Now, that sounds horrible, and it kind of is, but the most annoying part is that
 
 Does that sound gross? Good: **wear gloves when working with urushi, and wear clothes if you're in a poison ivy/poison oak region**.
 
-Seriously, it'll take you down, and if you live in North America, your doctor's just going to prescribe antibiotics and a topic cream, neither of which will do anything. You have to ride it out, and you have to not scratch, and you will be driven close to mad, while not being able to do your job.
+Seriously, it'll take you down, and if you live in North America, your doctor's just going to prescribe antibiotics and a topical cream, neither of which will actually do anything to make you heal faster - they're just overreactions to "you might scratch yourself open and get an infection O_O" (protip: don't scratch. Yeah it itches like crazy, suck it up. 2 weeks from now you won't remember itching 2 weeks ago). You have to ride it out, and you have to not scratch, and you will be driven close to mad, while not being able to do your job.
 
 Don't be like me.
